test: test plugin output

--- a/test/fixtures/basic.expected.html
+++ b/test/fixtures/basic.expected.html
@@ -1,1 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
+	<head>
+		<script src="basic.js" integrity="sha512-MUS7Gdcgr3In98ODhITyPjXWdWE9dezoOcyopcyYXzpFz2LrOApCRupkTwgiaS31+DhQacgbQ5T1hlGWPiBNGQ=="></script>
+		<link rel="stylesheet" href="basic.css" integrity="sha512-CVazCeMWuNKPH6VzeuYxVGC3JKXVQB/wqncMrpHoS3wJclPNeKN+SxO/zz1A9U3s2zczk/Yx1iZEJ6+CwJW81A==">
+	</head>
+</html>
