--- a/test/fixtures/basic.html
+++ b/test/fixtures/basic.html
@@ -1,1 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
+	<head>
+		<script src="basic.js"></script>
+		<link rel="stylesheet" href="basic.css" />
+	</head>
+</html>
