--- a/test/fixtures/basic.html
+++ b/test/fixtures/basic.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+			crossorigin="anonymous"
+		></script>
 		<script src="basic.js"></script>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+			crossorigin="anonymous"
+		/>
 		<link rel="stylesheet" href="basic.css" />
 	</head>
 </html>
