test: handle empty source attributes

--- a/test/fixtures/basic.html
+++ b/test/fixtures/basic.html
@@ -12,5 +12,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="basic.css" />
+		<link rel="stylesheet" />
+		<script></script>
 	</head>
 </html>
