fix: do not replace existing integrity attributes

--- a/test/fixtures/basic.html
+++ b/test/fixtures/basic.html
@@ -12,6 +12,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="basic.css" />
+		<link rel="stylesheet" href="basic.css" integrity="DEFINED" />
 		<link rel="stylesheet" />
 		<script></script>
 	</head>
